fix: restore width:100vw profile, remove overflow blocks on tablet/mobile sections

--- a/portfolio-master/portfolio-master/app/routes/home/profile.module.css
+++ b/portfolio-master/portfolio-master/app/routes/home/profile.module.css
@@ -1,5 +1,5 @@
 .profile {
-  max-width: 100%;
+  width: 100vw;
   min-height: 100vh;
   margin-top: 60px;
   margin-bottom: 40px;
@@ -7,7 +7,6 @@
   padding-bottom: 40px;
   display: flex;
   justify-content: center;
-  overflow-x: hidden;
 
   @media (--mediaTablet) {
     padding-top: 50px;
@@ -21,7 +20,6 @@
   @media (--mediaMobile) {
     margin-top: 0;
     padding-top: var(--space4XL);
-    overflow-x: hidden;
   }
 
   @media (--mediaMobile), (--mediaMobileLS) {
